package com.huaan.jmeasure.core;

/**
 * Created by Administrator on 2017/2/11 0011.
 */
public interface IAlgorithm {
    Result run();
}
